# toyOS

./: .clang-format  .gitignore  .gn  BUILD.gn  Makefile  kernel.lds
VM/: bochsrc  boot.img
bootLoader/: BUILD.gn  Makefile  ards.inc  boot.asm  boot.inc  common.inc  fat12.inc  loader.asm  loader.inc
kernel/: BUILD.gn  Makefile  font.cc  font.h  head.asm  kernel.asm  kernel.lds  lib.h  main.c  main.cc  printk.c  printk.cc  printk.h
kernel/asm/: Makefile  entry.asm  gate.h  head.asm  linkage.h  trap.c  trap.cc  trap.h
kernel/memory/: BUILD.gn  memory.cc  memory.h
kernel/task/: BUILD.gn
proj/toyOS.xcodeproj/: project.pbxproj
