import("//build/config/global.gni")

action("install") {
    script = "//build/script/install.py"
    outputs = [
        "$target_out_dir/kernel.bin",
    ]

    depfile =  target_gen_dir + "/" + target_name + ".d"

    args = [
        "$source_root",
        rebase_path(root_out_dir),
        rebase_path(outputs[0]),
        rebase_path(depfile),
    ]

    deps = [
        "//:build"
    ]
}

action("run") {
    script = "//build/script/run.py"
    outputs = [target_out_dir + "/.force_run"]
    deps = [
        ":install"
    ]
}

action("modify_pbxproj") {
    script = "//build/script/modify_pbxproj.py"
    depfile =  target_gen_dir + "/" + target_name + ".d"
    outputs = [target_out_dir + "/" + target_name]
    args = [
        rebase_path(root_out_dir) + "/" + "toyOS.xcodeproj",
        rebase_path(outputs[0]),
        rebase_path(depfile),
        rebase_path(root_out_dir),
    ]
}

group("phony") {
    deps = [
        "//build/phony:build_proxy",
        "//build/phony:run_proxy",
    ]
}

group("build") {
    public_deps = [
        "//:system",
        "//bootLoader:bootloader",
        "//:modify_pbxproj"
    ]
}

executable("system") {
    deps = [
        "//kernel:kernel"
    ]

    configs = [
        "//build/config:exeConfig"
    ]
}